// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`other props get passed to container 1`] = `
<span
  className="icon"
  title="Add some stuff"
>
  <RawIcon
    name="plus"
  />
</span>
`;

exports[`render icon 1`] = `
<span
  className="icon"
>
  <RawIcon
    name="plus"
  />
</span>
`;

exports[`set size 1`] = `
<span
  className="icon is-large"
>
  <RawIcon
    name="plus"
  />
</span>
`;
